--- a/Linvest/Investimentos/investimentos.html
+++ b/Linvest/Investimentos/investimentos.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Investimentos - Linvest</title>
+    <link rel="stylesheet" href="/Linvest/Investimentos/investimentos.css">
+    <script src="./investimentos.js"></script>
     <header>
         <h1>Investimentos - Linvest</h1>
     </header>
@@ -12,9 +14,9 @@
     <!-- Menu de navegação lateral -->
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="oie.html">Início</a>
-        <a href="teste-qi.html">Teste de QI</a>
-        <a href="suporte.html">Suporte</a>
+        <a href="/Linvest/PRINCIPAL/principal.html">Início</a>
+        <a href="/Linvest/Teste de QI/qi.html">Teste de QI</a>
+        <a href="/Linvest/Suporte/suporte.html">Suporte</a>
     </div>
     <!-- Conteúdo principal -->
     <div class="main">
