--- a/Linvest/Suporte/suporte.html
+++ b/Linvest/Suporte/suporte.html
@@ -12,9 +12,11 @@
     <!-- Menu de navegação lateral -->
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="oie.html">Início</a>
-        <a href="investimentos.html">Investimentos</a>
-        <a href="teste-qi.html">Teste de QI</a>
+        <link rel="stylesheet" href="suporte.css">
+        <script src="./suporte.js"></script>
+        <a href="/Linvest/PRINCIPAL/principal.html">Início</a>
+        <a href="/Linvest/Investimentos/investimentos.html">Investimentos</a>
+        <a href="/Linvest/Teste de QI/qi.html">Teste de QI</a>
     </div>
     <!-- Conteúdo principal -->
     <div class="main">
@@ -22,8 +24,9 @@
             <h2>Deixe seu feedback</h2>
             <p>Por favor, selecione sua satisfação com o serviço em uma escala de 1 a 10:</p>
             <form action="submit_feedback.php" method="post">
-                <select id="satisfaction" name="satisfaction">
-                    <option value="1">1 - Muito insatisfeito</option>
+                
+                    <option value="-">Selecione uma opção</option>
+                    <option value="1">1 - Ruim</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
