--- a/Linvest/Teste de QI/qi.html
+++ b/Linvest/Teste de QI/qi.html
@@ -6,9 +6,11 @@
 <!-- Menu de navegação lateral -->
 <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="oie.html">Início</a>
-    <a href="investimentos.html">Investimentos</a>
-    <a href="suporte.html">Suporte</a>
+    <link rel="stylesheet" href="qi.css">
+    <script src="./qi.js"></script>
+    <a href="/Linvest/PRINCIPAL/principal.html">Início</a>
+    <a href="/Linvest/Investimentos/investimentos.html">Investimentos</a>
+    <a href="/Linvest/Suporte/suporte.html">Suporte</a>
 </div>
 <!-- Conteúdo principal -->
 <div class="content">
@@ -49,4 +51,6 @@
     </form>
 
     <div id="result"></div>
+    
 </div>
+
