--- a/Linvest/etfs/etfs.html
+++ b/Linvest/etfs/etfs.html
@@ -17,10 +17,13 @@
     <button class="nav-btn" onclick="openNav()">☰</button>
     <!-- Menu de navegação lateral -->
     <div id="mySidenav" class="sidenav">
+        <script src="./etfs.js"></script>
+        <link rel="stylesheet" href="etfs.css">
+        <link rel="stylesheet" href="etfs.html">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="oie.html">Início</a>
-        <a href="teste-qi.html">Teste de QI</a>
-        <a href="suporte.html">Suporte</a>
+        <a href="/Linvest/PRINCIPAL/principal.html">Início</a>
+        <a href="/Linvest/Teste de QI/qi.html">Teste de QI</a>
+        <a href="/Linvest/Suporte/suporte.html">Suporte</a>
     </div>
     <!-- Conteúdo principal -->
     <div class="main">
