link das paginas de investimentos e algumas mudanças

--- a/Linvest/Investimentos/investimentos.html
+++ b/Linvest/Investimentos/investimentos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Investimentos - Linvest</title>
-    <link rel="stylesheet" href="/Linvest/Investimentos/investimentos.css">
+   <link rel="stylesheet" href="investimentos.css">
     <script src="./investimentos.js"></script>
     <header>
         <h1>Investimentos - Linvest</h1>
@@ -17,16 +17,17 @@
         <a href="/Linvest/PRINCIPAL/principal.html">Início</a>
         <a href="/Linvest/Teste de QI/qi.html">Teste de QI</a>
         <a href="/Linvest/Suporte/suporte.html">Suporte</a>
+        
     </div>
     <!-- Conteúdo principal -->
     <div class="main">
         <div class="section-container">
             <h2>Investimentos</h2>
-            <h3><a href="cdb.html">CDB (Certificado de Depósito Bancário)</a></h3>
+            <h3><a href="/Linvest/cdb/cdb.html">CDB (Certificado de Depósito Bancário)</a></h3>
             <p>O CDB é um título emitido pelos bancos para captar recursos para financiar suas atividades. Geralmente, apresenta boa rentabilidade e segurança para investidores conservadores.</p>
-            <h3><a href="poupanca.html">Poupança</a></h3>
+            <h3><a href="/Linvest/Poupança/poupança.html">Poupança</a></h3>
             <p>A poupança é uma forma de investimento oferecida pelos bancos, com liquidez diária e isenção de imposto de renda para pessoas físicas. No entanto, sua rentabilidade pode ser baixa em comparação com outras opções de investimento.</p>
-            <h3><a href="etfs.html">ETFs (Exchange Traded Funds)</a></h3>
+            <h3><a href="/Linvest/etfs/etfs.html">ETFs (Exchange Traded Funds)</a></h3>
             <p>Os ETFs são fundos de investimento negociados na bolsa de valores que replicam índices de mercado, como o Ibovespa. Permitem diversificar investimentos com baixo custo e são negociados em pregão como ações.</p>
         </div>
     </div>
