--- a/Linvest/Poupança/poupança.html
+++ b/Linvest/Poupança/poupança.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="poupança.js"></script>
+    <link rel="stylesheet" href="poupança.css">
     <title>Poupança - Linvest</title>
+    
     <body>
         <header>
             <h1>Poupança - Linvest</h1>
@@ -13,9 +16,9 @@
         <!-- Menu de navegação lateral -->
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="oie.html">Início</a>
-            <a href="teste-qi.html">Teste de QI</a>
-            <a href="suporte.html">Suporte</a>
+            <a href="/Linvest/PRINCIPAL/principal.html">Início</a>
+            <a href="/Linvest/Teste de QI/qi.html">Teste de QI</a>
+            <a href="/Linvest/Suporte/suporte.html">Suporte</a>
         </div>
         <!-- Conteúdo principal -->
         <div class="main">
