--- a/Linvest/Investimentos/investimentos.html
+++ b/Linvest/Investimentos/investimentos.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Investimentos - Linvest</title>
-   <link rel="stylesheet" href="investimentos.css">
+    <link rel="stylesheet" href="investimentos.css">
     <script src="./investimentos.js"></script>
+</head>
+<body>
     <header>
         <h1>Investimentos - Linvest</h1>
     </header>
-    <!-- Botão para abrir o menu de navegação -->
-    <button class="nav-btn" onclick="openNav()">☰</button>
+
     <!-- Menu de navegação lateral -->
-    <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <nav class="navbar">
         <a href="/Linvest/PRINCIPAL/principal.html">Início</a>
         <a href="/Linvest/Teste de QI/qi.html">Teste de QI</a>
         <a href="/Linvest/Suporte/suporte.html">Suporte</a>
-        
-    </div>
+    </nav>
     <!-- Conteúdo principal -->
     <div class="main">
         <div class="section-container">
@@ -31,3 +30,5 @@
             <p>Os ETFs são fundos de investimento negociados na bolsa de valores que replicam índices de mercado, como o Ibovespa. Permitem diversificar investimentos com baixo custo e são negociados em pregão como ações.</p>
         </div>
     </div>
+</body>
+</html>
