--- a/Linvest/Teste de QI/qi.html
+++ b/Linvest/Teste de QI/qi.html
@@ -9,15 +9,17 @@
     <header>
         <h1>Teste de Perfil de Investidor</h1>
     </header>
-   
+    <!-- Botão para abrir o menu de navegação -->
+    <button class="nav-btn" onclick="openNav()">☰</button>
     <!-- Menu de navegação lateral -->
-    <div class="navbar">
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <link rel="stylesheet" href="qi.css">
         <script src="./qi.js"></script>
         <a href="/Linvest/PRINCIPAL/principal.html">Início</a>
         <a href="/Linvest/Investimentos/investimentos.html">Investimentos</a>
         <a href="/Linvest/Suporte/suporte.html">Suporte</a>
-    </nav>
+    </div>
     <!-- Conteúdo principal -->
     <header></header>
     <div class="content">
