--- a/Linvest/Investimentos/investimentos.html
+++ b/Linvest/Investimentos/investimentos.html
@@ -4,31 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Investimentos - Linvest</title>
-    <link rel="stylesheet" href="investimentos.css">
+   <link rel="stylesheet" href="investimentos.css">
     <script src="./investimentos.js"></script>
-</head>
-<body>
     <header>
         <h1>Investimentos - Linvest</h1>
     </header>
-
+    <!-- Botão para abrir o menu de navegação -->
+    <button class="nav-btn" onclick="openNav()">☰</button>
     <!-- Menu de navegação lateral -->
-    <nav class="navbar">
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="/Linvest/PRINCIPAL/principal.html">Início</a>
         <a href="/Linvest/Teste de QI/qi.html">Teste de QI</a>
         <a href="/Linvest/Suporte/suporte.html">Suporte</a>
-    </nav>
+        
+    </div>
     <!-- Conteúdo principal -->
+
     <div class="main">
+        
         <div class="section-container">
-            <h2>Investimentos</h2>
-            <h3><a href="/Linvest/cdb/cdb.html">CDB (Certificado de Depósito Bancário)</a></h3>
+            <h2>CDB</h2>
+            <h3 ><a href="/Linvest/cdb/cdb.html">CDB (Certificado de Depósito Bancário)</a></h3>
             <p>O CDB é um título emitido pelos bancos para captar recursos para financiar suas atividades. Geralmente, apresenta boa rentabilidade e segurança para investidores conservadores.</p>
-            <h3><a href="/Linvest/Poupança/poupança.html">Poupança</a></h3>
+        </div>
+
+        <div class="section-container2">
+            <h2>Poupança</h2>
+            <h3 ><a href="/Linvest/Poupança/poupança.html">Poupança</a></h3>
             <p>A poupança é uma forma de investimento oferecida pelos bancos, com liquidez diária e isenção de imposto de renda para pessoas físicas. No entanto, sua rentabilidade pode ser baixa em comparação com outras opções de investimento.</p>
-            <h3><a href="/Linvest/etfs/etfs.html">ETFs (Exchange Traded Funds)</a></h3>
+        </div>
+
+        <div class="section-container3">
+            <h2>Poupança</h2>
+            <h3 ><a href="/Linvest/etfs/etfs.html">ETFs (Exchange Traded Funds)</a></h3>
             <p>Os ETFs são fundos de investimento negociados na bolsa de valores que replicam índices de mercado, como o Ibovespa. Permitem diversificar investimentos com baixo custo e são negociados em pregão como ações.</p>
         </div>
     </div>
-</body>
-</html>
