--- a/Linvest/etfs/etfs.html
+++ b/Linvest/etfs/etfs.html
@@ -12,16 +12,18 @@
     <header>
         <h1>ETFs - Linvest</h1>
     </header>
-   
+    <!-- Botão para abrir o menu de navegação -->
+    <button class="nav-btn" onclick="openNav()">☰</button>
     <!-- Menu de navegação lateral -->
-    <nav class="navbar">
+    <div id="mySidenav" class="sidenav">
         <script src="./etfs.js"></script>
         <link rel="stylesheet" href="etfs.css">
         <link rel="stylesheet" href="etfs.html">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="/Linvest/PRINCIPAL/principal.html">Início</a>
         <a href="/Linvest/Teste de QI/qi.html">Teste de QI</a>
         <a href="/Linvest/Suporte/suporte.html">Suporte</a>
-    </nav>
+    </div>
     <!-- Conteúdo principal -->
     <div class="main">
         <div class="section-container">
