--- a/Linvest/Investimentos/investimentos.html
+++ b/Linvest/Investimentos/investimentos.html
@@ -9,35 +9,20 @@
     <header>
         <h1>Investimentos - Linvest</h1>
     </header>
-    <!-- Botão para abrir o menu de navegação -->
-    <button class="nav-btn" onclick="openNav()">☰</button>
-    <!-- Menu de navegação lateral -->
-    <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="/Linvest/PRINCIPAL/principal.html">Início</a>
-        <a href="/Linvest/Teste de QI/qi.html">Teste de QI</a>
+    <nav class="navbar">
+        <a href="http://127.0.0.1:5500/Linvest/PRINCIPAL/principal.html">Inicio</a>
+        <a href="/Linvest/Teste de QI/qi.html">Projeto de vida</a>
         <a href="/Linvest/Suporte/suporte.html">Suporte</a>
-        
-    </div>
+    </nav>
     <!-- Conteúdo principal -->
-
     <div class="main">
-        
         <div class="section-container">
-            <h2>CDB</h2>
-            <h3 ><a href="/Linvest/cdb/cdb.html">CDB (Certificado de Depósito Bancário)</a></h3>
+            <h2>Investimentos</h2>
+            <h3><a href="/Linvest/cdb/cdb.html">CDB (Certificado de Depósito Bancário)</a></h3>
             <p>O CDB é um título emitido pelos bancos para captar recursos para financiar suas atividades. Geralmente, apresenta boa rentabilidade e segurança para investidores conservadores.</p>
-        </div>
-
-        <div class="section-container2">
-            <h2>Poupança</h2>
-            <h3 ><a href="/Linvest/Poupança/poupança.html">Poupança</a></h3>
+            <h3><a href="/Linvest/Poupança/poupança.html">Poupança</a></h3>
             <p>A poupança é uma forma de investimento oferecida pelos bancos, com liquidez diária e isenção de imposto de renda para pessoas físicas. No entanto, sua rentabilidade pode ser baixa em comparação com outras opções de investimento.</p>
-        </div>
-
-        <div class="section-container3">
-            <h2>Poupança</h2>
-            <h3 ><a href="/Linvest/etfs/etfs.html">ETFs (Exchange Traded Funds)</a></h3>
+            <h3><a href="/Linvest/etfs/etfs.html">ETFs (Exchange Traded Funds)</a></h3>
             <p>Os ETFs são fundos de investimento negociados na bolsa de valores que replicam índices de mercado, como o Ibovespa. Permitem diversificar investimentos com baixo custo e são negociados em pregão como ações.</p>
         </div>
     </div>
