--- a/Linvest/Poupança/poupança.html
+++ b/Linvest/Poupança/poupança.html
@@ -12,13 +12,13 @@
             <h1>Poupança - Linvest</h1>
         </header>
         <!-- Botão para abrir o menu de navegação -->
-        <button class="nav-btn" onclick="openNav()">☰</button>
+        <button class="nav-btn" onclick="toggleNav()">☰</button>
         <!-- Menu de navegação lateral -->
         <div id="mySidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="/Linvest/PRINCIPAL/principal.html">Início</a>
-            <a href="/Linvest/Teste de QI/qi.html">Teste de QI</a>
-            <a href="/Linvest/Suporte/suporte.html">Suporte</a>
+            <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
+            <a href="../PRINCIPAL/principal.html">Início</a>
+            <a href="../Teste de QI/qi.html">Teste de QI</a>
+            <a href="../Suporte/suporte.html">Suporte</a>
         </div>
         <!-- Conteúdo principal -->
         <div class="main">
