--- a/Linvest/Suporte/suporte.html
+++ b/Linvest/Suporte/suporte.html
@@ -8,10 +8,10 @@
         <h1>Suporte - Linvest</h1>
     </header>
     <!-- Botão para abrir o menu de navegação -->
-    <button class="nav-btn" onclick="openNav()">☰</button>
+    <button class="nav-btn" onclick="toggleNav()">☰</button>
     <!-- Menu de navegação lateral -->
     <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
         <link rel="stylesheet" href="suporte.css">
         <script src="./suporte.js"></script>
         <a href="../PRINCIPAL/principal.html">Início</a>
