--- a/Linvest/Teste de QI/qi.html
+++ b/Linvest/Teste de QI/qi.html
@@ -10,10 +10,10 @@
         <h1>Teste de Perfil de Investidor</h1>
     </header>
     <!-- Botão para abrir o menu de navegação -->
-    <button class="nav-btn" onclick="openNav()">☰</button>
+    <button class="nav-btn" onclick="toggleNav()">☰</button>
     <!-- Menu de navegação lateral -->
     <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
         <link rel="stylesheet" href="qi.css">
         <script src="./qi.js"></script>
         <a href="../PRINCIPAL/principal.html">Início</a>
