--- a/Linvest/etfs/etfs.html
+++ b/Linvest/etfs/etfs.html
@@ -13,13 +13,13 @@
         <h1>ETFs - Linvest</h1>
     </header>
     <!-- Botão para abrir o menu de navegação -->
-    <button class="nav-btn" onclick="openNav()">☰</button>
+    <button class="nav-btn" onclick="toggleNav()">☰</button>
     <!-- Menu de navegação lateral -->
     <div id="mySidenav" class="sidenav">
         <script src="./etfs.js"></script>
         <link rel="stylesheet" href="etfs.css">
         <link rel="stylesheet" href="etfs.html">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
         <a href="../PRINCIPAL/principal.html">Início</a>
         <a href="../Teste de QI/qi.html">Teste de QI</a>
         <a href="../Suporte/suporte.html">Suporte</a>
