--- a/Linvest/Investimentos/investimentos.html
+++ b/Linvest/Investimentos/investimentos.html
@@ -10,10 +10,10 @@
         <h1>Investimentos - Linvest</h1>
     </header>
     <!-- Botão para abrir o menu de navegação -->
-    <button class="nav-btn" onclick="openNav()">☰</button>
+    <button class="nav-btn" onclick="toggleNav()">☰</button>
     <!-- Menu de navegação lateral -->
     <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
         <a href="../PRINCIPAL/principal.html">Início</a>
         <a href="../Teste de QI/qi.html">Teste de QI</a>
         <a href="../Suporte/suporte.html">Suporte</a>
