--- a/Linvest/PRINCIPAL/principal.html
+++ b/Linvest/PRINCIPAL/principal.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Investimentos/investimentos.html">
     <link rel="stylesheet" href="../PRINCIPAL/principal.css">
-    
- 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Linvest - Seu Portal de Investimentos</title>
    
 </head>
@@ -27,8 +27,9 @@
     </div>
     <!-- Conteúdo principal -->
     <div class="main">
-        <div class="section-container">
-            <h2>Investimentos</h2>
+        <div class="row">
+         <div class="col-md-1.5" id="container1">
+            <h2 id="Investimentos-texto">Investimentos</h2>
             <p>Nossa equipe reuniu informações sobre oportunidades de investimento para ajudá-lo a tomar decisões informadas sobre onde investir seu dinheiro.</p>
             <ul>
                 <li>CDB</li>
@@ -36,15 +37,20 @@
                 <li>ETFs</li>
             </ul>
             <p>Cada seção fornece uma visão geral do tipo de investimento, seus benefícios e riscos.</p>
-        </div>
-        <div class="section-container2">
-            <h2>Teste de QI</h2>
+         </div>
+        </div> 
+        <div>
+         <div class="col-md-1.5" id="container2">
+            <h2 id="teste-texto">Teste de QI</h2>
             <p>Teste seus conhecimentos sobre investimentos com nosso Teste de QI. Responda a uma série de perguntas para avaliar seu entendimento sobre os princípios básicos e avançados de investimento.</p>
+         </div>
         </div>
-        <div class="section-container3">
-            <h2>Suporte</h2>
+        <div>
+         <div class="col-md-1.5" id="container3">
+            <h2 id="suporte-texto">Suporte</h2>
             <p>Precisa de ajuda? Entre em contato com nossa equipe de suporte para obter assistência personalizada. Estamos aqui para responder às suas perguntas e orientá-lo em sua jornada de investimento.</p>
-        </div>
+         </div>
+        </div> 
     </div>
 
 </body>
