--- a/Linvest/Investimentos/investimentos.html
+++ b/Linvest/Investimentos/investimentos.html
@@ -7,7 +7,7 @@
    <link rel="stylesheet" href="investimentos.css">
     <script src="./investimentos.js"></script>
     <header>
-        <h1>Investimentos - Linvest</h1>
+        <h1 id="invest">Investimentos - Linvest</h1>
     </header>
     <!-- Botão para abrir o menu de navegação -->
     <button class="nav-btn" onclick="toggleNav()">☰</button>
