--- a/Linvest/Investimentos/investimentos.html
+++ b/Linvest/Investimentos/investimentos.html
@@ -31,3 +31,13 @@
             <p>Os ETFs são fundos de investimento negociados na bolsa de valores que replicam índices de mercado, como o Ibovespa. Permitem diversificar investimentos com baixo custo e são negociados em pregão como ações.</p>
         </div>
     </div>
+    <div class="loader">
+        <div class="loader__bar"></div>
+        <div class="loader__bar"></div>
+        <div class="loader__bar"></div>
+        <div class="loader__bar"></div>
+        <div class="loader__bar"></div>
+        <div class="loader__ball"></div>
+      </div>
+</head>
+</html>    
