--- a/Linvest/Investimentos/investimentos.html
+++ b/Linvest/Investimentos/investimentos.html
@@ -14,30 +14,43 @@
     <!-- Menu de navegação lateral -->
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
-        <a href="../PRINCIPAL/principal.html">Início</a>
-        <a href="../Teste de QI/qi.html">Teste de QI</a>
-        <a href="../Suporte/suporte.html">Suporte</a>
+        <button class="in"><a href="../PRINCIPAL/principal.html" id="in">Início</a></button>
+        <button class="ves"><a href="../Teste de QI/qi.html" id="ves">Teste de Investidor</a></button>
+        <button class="su"><a href="../Suporte/suporte.html" id="su">Suporte</a></button>
         
     </div>
     <!-- Conteúdo principal -->
     <div class="main">
         <div class="section-container">
-            <h2>Investimentos</h2>
-            <h3><a href="../cdb/cdb.html">CDB (Certificado de Depósito Bancário)</a></h3>
-            <p>O CDB é um título emitido pelos bancos para captar recursos para financiar suas atividades. Geralmente, apresenta boa rentabilidade e segurança para investidores conservadores.</p>
-            <h3><a href="../Poupança/poupança.html">Poupança</a></h3>
-            <p>A poupança é uma forma de investimento oferecida pelos bancos, com liquidez diária e isenção de imposto de renda para pessoas físicas. No entanto, sua rentabilidade pode ser baixa em comparação com outras opções de investimento.</p>
-            <h3><a href="../etfs/etfs.html">ETFs (Exchange Traded Funds)</a></h3>
-            <p>Os ETFs são fundos de investimento negociados na bolsa de valores que replicam índices de mercado, como o Ibovespa. Permitem diversificar investimentos com baixo custo e são negociados em pregão como ações.</p>
+            <h3 ><a href="../cdb/cdb.html" id="cd">CDB </a></h3>
+            <p>O Certificado de Depósito Bancário (CDB) é um instrumento financeiro emitido por instituições bancárias para angariar fundos destinados ao financiamento de suas operações. Essencialmente, o CDB funciona como um acordo entre o investidor e o banco, no qual o investidor empresta seu dinheiro ao banco por um determinado período, em troca de juros sobre o valor emprestado.
+            Este título de renda fixa é conhecido por sua versatilidade, oferecendo uma ampla gama deopções de prazo e remuneração, adaptando-se às necessidades e objetivos de cadainvestidor.</p>
+            <button id="cd-button">Vamos Lá-></button>
+        </div>
+        <div class="section-container2">
+            <h3><a href="../Poupança/poupança.html" id="pou">Poupança</a></h3>
+            <p>A poupança representa uma modalidade de investimento amplamente difundida entre os bancos, especialmente por sua acessibilidade e simplicidade. Ela oferece aos investidores a vantagem da liquidez diária, permitindo que os fundos sejam facilmente resgatados quando necessário, sem a imposição de penalidades significativas.
+            Uma das principais características que torna a poupança atrativa para muitos investidoresé sua isenção de imposto de renda para pessoas físicas, o que significa que os rendimentosgerados não são tributados, proporcionando uma vantagem adicional em termos de retornofinanceiro.No entanto, é importante reconhecer que a rentabilidade da poupança pode ser relativamente modesta em comparação com outras opções de investimento disponíveis no mercado financeiro. </p>
+            <button id="pou2">Vamos Lá-></button>
+        </div>
+        <div class="section-container3">
+            <h3><a href="../etfs/etfs.html" id="etf">ETFs</a></h3>
+            <p>
+                Os ETFs, ou Exchange-Traded Funds, são veículos de investimento que representam uma cesta diversificada de ativos, como ações, títulos, commodities ou uma combinação desses ativos. Eles são negociados em bolsas de valores, assim como ações individuais, permitindo que os investidores comprem e vendam participações ao longo do dia a preços de mercado em tempo real.
+
+                Uma das principais vantagens dos ETFs é a sua diversificação instantânea. Ao investir em um ETF, os                 investidores estão, na verdade, investindo em uma carteira diversificada de ativos subjacentes, o que pode                 ajudar a reduzir o risco em comparação com investimentos individuais em ações ou títulos.
+                
+                Além disso, os ETFs geralmente têm custos mais baixos em comparação com fundos mútuos tradicionais, pois                 muitos deles são passivamente gerenciados para rastrear um índice de mercado específico. </p>
+            <button id="etfss">Vamos Lá-></button>
         </div>
     </div>
-    <div class="loader">
+    <!--<div class="loader">
         <div class="loader__bar"></div>
         <div class="loader__bar"></div>
         <div class="loader__bar"></div>
         <div class="loader__bar"></div>
         <div class="loader__bar"></div>
         <div class="loader__ball"></div>
-      </div>
+      </div>-->
 </head>
 </html>    
