--- a/Linvest/Suporte/suporte.html
+++ b/Linvest/Suporte/suporte.html
@@ -14,9 +14,9 @@
         <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
         <link rel="stylesheet" href="suporte.css">
         <script src="./suporte.js"></script>
-        <a href="../PRINCIPAL/principal.html">Início</a>
-        <a href="../Investimentos/investimentos.html">Investimentos</a>
-        <a href="../Teste de QI/qi.html">Teste de QI</a>
+        <button class="in"><a href="../PRINCIPAL/principal.html" id="in">Início</a></button>
+        <button class="ves"><a href="../Investimentos/investimentos.html" id="ves">Investimentos</a></button>
+        <button class="te"><a href="../Teste de QI/qi.html" id="te">Teste de Investidor</a></button>
     </div>
     <!-- Conteúdo principal -->
     <div class="main">
