--- a/Linvest/Teste de QI/qi.html
+++ b/Linvest/Teste de QI/qi.html
@@ -16,9 +16,9 @@
         <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
         <link rel="stylesheet" href="qi.css">
         <script src="./qi.js"></script>
-        <a href="../PRINCIPAL/principal.html">Início</a>
-        <a href="../Investimentos/investimentos.html">Investimentos</a>
-        <a href="../Suporte/suporte.html">Suporte</a>
+        <button class="in"><a href="../PRINCIPAL/principal.html" id="in">Início</a></button>
+        <button class="ves"><a href="../Investimentos/investimentos.html" id="ves">Investimentos</a></button>
+        <button class="su"><a href="../Suporte/suporte.html" id="su">Suporte</a></button>
     </div>
     <!-- Conteúdo principal -->
    
